# NeuroonOpenCore

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  DEV.org  Doxyfile  README.md
api/: NeuronCore.h  NeuroonAlgCoreApi.h  NeuroonAlgScenarioApi.h  NeuroonApiCommons.h  NeuroonDfuApi.h  NeuroonHAL.h  NeuroonLowMaskApi.h  NeuroonMaskCommApi.h  NeuroonMaskScenariosApi.h  NeuroonSignalStreamApi.h  NeuroonStandaloneAlgorithmsApi.h
docs/: External_Doxyfile  Internal_Doxyfile  TODO.org
src/: AlgCoreDaemon.cpp  AlgCoreDaemon.h  AsyncDataSource.h  CommonTypedefs.h  CommonTypes.h  Config.h  Constants.h  CsvSignalSimulator.cpp  CsvSignalSimulator.h  CsvUtils.cpp  CsvUtils.h  DataSink.cpp  DataSink.h  DataSource.cpp  DataSource.h  EegQualityStream.cpp  EegQualityStream.h  Exceptions.h  ExecutionTime.h  ExpandingMean.cpp  ExpandingMean.h  ExpandingStd.h  FrameStreamPipe.h  IRbAlgorithm.h  IStreamPipe.h  InMsg.h  InValue.cpp  InValue.h  MemoryUtils.h  NeuronCore.cpp  NeuroonAlgCoreApi.cpp  NeuroonDFU.cpp  NeuroonHAL.cpp  NeuroonSignalFrames.cpp  NeuroonSignalFrames.h  NeuroonSignalStreamApi.cpp  NeuroonSignals.cpp  NeuroonSignals.h  Rolling.cpp  Rolling.h  (+30 more)
src/mask/: NeuroonMask.cpp  NeuroonMask.h  PrivNeuroonMask.h
src/numerics/: ExpandingMean.h  ExpandingStd.h  RollingMean.cpp  RollingMean.h  SimpleSpectrogramFilter.cpp  SimpleSpectrogramFilter.h  Spectrogram.cpp  Spectrogram.h  dlib_utils.cpp  dlib_utils.h
src/online_presentation/: OnlinePresentationAlgorithm.cpp  OnlinePresentationAlgorithm.h  OnlineSignalQualityAlgorithmMock.cpp  OnlineSignalQualityAlgorithmMock.h
src/scenario/: BaseScenario.cpp  BaseScenario.h  GenericScenarioTemplates.cpp  GenericScenarioTemplates.h  IScenarioTrigger.h  LucidDreamScenario.cpp  LucidDreamScenario.h  MacroScenario.cpp  MacroScenario.h  MicroScenario.cpp  MicroScenario.h  Scenario.cpp  Scenario.h  ScenarioFrontEnd.cpp  SleepScenario.cpp  SleepScenario.h  TriggerScenario.h
src/scenarios/: GenericScenarioInstructionSets.cpp  GenericScenarioInstructionSets.h  GenericScenarioTemplates.cpp  IMicroScenario.h  IScenarioTrigger.h  LightBoostScenario.cpp  LightBoostScenario.h  LucidDreamScenario.cpp  LucidDreamScenario.h  MacroScenario.cpp  MacroScenario.h  MicroScenario.cpp  MicroScenario.h  MocScenario.cpp  MocScenario.h  Scenario.cpp  Scenario.h  ScenarioFrontEnd.cpp  ScenarioTrigger.h  SleepScenario.cpp  SleepScenario.h
src/scenarios/microscenarios/: CircadianShiftMicroScenario.cpp  CircadianShiftMicroScenario.h  ContactTestScenario.cpp  ContactTestScenario.h  HardWakeupMicroScenario.cpp  HardWakeupMicroScenario.h  LightBoostLightSequenceScenario.cpp  LightBoostLightSequenceScenario.h  LucidDreamLightsScenario.cpp  LucidDreamLightsScenario.h  MicroScenarioSequenceLibrary.cpp  MicroScenarioSequenceLibrary.h  NeuroonSunriseMicroScenario.cpp  NeuroonSunriseMicroScenario.h  SmartWakeupMicroScenario.cpp  SmartWakeupMicroScenario.h
src/scenarios/triggers/: LostContactTrigger.cpp  LostContactTrigger.h  RemDetectedTrigger.cpp  RemDetectedTrigger.h  TimeTrigger.h
src/sleep_staging/: AmplitudeFilter.cpp  AmplitudeFilter.h  EegFeatures.cpp  EegFeatures.h  EntropyFilter.cpp  EntropyFilter.h  ExpandingStd.cpp  Features.cpp  Features.h  MlpClassifier.cpp  MlpClassifier.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h  OfflineStagingClassifier.cpp  OfflineStagingClassifier.h  OnLineViterbiSearch.cpp  OnLineViterbiSearch.h  OnlineStagingClassifier.h  OnlineStagingFeaturePreprocessor.cpp  OnlineStagingFeaturePreprocessor.h  StagingClassifier.cpp  StagingClassifier.h  StagingPreprocessor.cpp  StagingPreprocessor.h
src/sleep_staging/model/: i1.csv  i2.csv  w1.csv  w2.csv
src/sleep_staging/offline/: OfflineStagingClassifier.cpp  OfflineStagingClassifier.h  StagingPreprocessor.cpp  StagingPreprocessor.h
src/sleep_staging/online/: BrainWaveLevels.cpp  BrainWaveLevels.h  EegSignalQuality.cpp  EegSignalQuality.h  IOnline.h  (+13 more)
test/: amplitude_filter_test.h  csvsimulator_tests.h  csvutils_tests.h  download_test_data.sh  eeg_features_functional_test.h  eeg_features_test.h  entropy_filter_test.h  expanding_mean_test.h  expanding_std_test.h  fft_test.h  filter_test.h  functional_tests_data.h  logger_test.h  mlp_classifier_test.h  multilayer_perceptron_test.h  neuroonsignals_and_streamalgo_tests.h  offline_staging_classifier_test.h  online_staging_algorithm_test.h  online_staging_feature_preprocessor_test.h  online_staging_functional_test.h  online_viterbi_search_test.h  postprocess_results.py  rolling_mean_test.h  rolling_test.h  signal_utils_test.h  spectrogram_test.h  staging_classifier_test.h  staging_functional_test.h  staging_preprocessor_test.h  streaming_pipeline_and_csvsimulator_tests.h  streaming_pipeline_tests.h  test.cpp  test_utils.h  tests.cpp  union_test.h  x_cube_neural_network.h
test/functional/: CMakeLists.txt  brain_wave_levels_functional_test.cpp  eeg_features_functional_test.cpp  functional_tests.cpp  functional_tests_data.cpp  functional_tests_data.h  online_staging_algorithm_test.cpp  online_staging_feature_preprocessor_test.cpp  online_staging_functional_test.cpp
test/test_data/: download_test_data.sh
test/unit/: CMakeLists.txt  algorithm_mock_test.cpp  amplitude_filter_test.cpp  brain_waves_levels_test.cpp  csvsimulator_tests.cpp  csvutils_tests.cpp  eeg_features_test.cpp  eeg_features_test.h  heart_rate_tests.cpp  logger_test.cpp  mlp_classifier_test.cpp  neuroonsignals_and_streamalgo_tests.cpp  offline_staging_classifier_test.h  rolling_test.h  scenario_test.cpp  serialization_utils_test.cpp  signal_utils_test.cpp  staging_preprocessor_test.cpp  streaming_pipeline_and_csvsimulator_tests.cpp  streaming_pipeline_and_csvsimulator_tests.h  streaming_pipeline_tests.cpp  streaming_pipeline_tests.h  test_utils.h  unit_tests.cpp
tools/: CMakeLists.txt
tools/csv_spectrogram/: CMakeLists.txt  csv_spectrogram.cpp
tools/offline_stager/: CMakeLists.txt  offline_stager.cpp  postprocess_results.py
tools/parser/: CMakeLists.txt  parser.cpp
tools/pyscripts/: pulse_staging.py
tools/simulator/: CMakeLists.txt  simulator.cpp
(+8 files in other folders)
